--- a/dinlive_baselib/src/main/AndroidManifest.xml
+++ b/dinlive_baselib/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dinlive.din.baselib">
+    <!-- Android 8.0对悬浮窗权限的限制 -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application>
         <meta-data
