--- a/dinlive_baselib/build.gradle
+++ b/dinlive_baselib/build.gradle
@@ -103,7 +103,9 @@ dependencies {
     api 'com.facebook.fresco:fresco:1.10.0'// 请添加上fresco的依赖，可以把fresco版本替换成最新的
     api 'com.facebook.fresco:animated-gif:1.10.0'
 
-
     //Fragmentation管理fragment任务找 https://github.com/YoKeyword/Fragmentation/blob/master/README_CN.md
     api 'me.yokeyword:fragmentation:1.3.7'
+
+    //BRVAH RecyclerAdapter框架（万能适配器） https://github.com/CymChad/BaseRecyclerViewAdapterHelper
+    api "com.github.CymChad:BaseRecyclerViewAdapterHelper:$BaseRecyclerViewAdapterHelper"
 }
