登陆注册 fragments 间通讯

--- a/dinlive_baselib/build.gradle
+++ b/dinlive_baselib/build.gradle
@@ -16,6 +16,8 @@ android {
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
             }
         }
+
+        buildConfigField "boolean", "IS_DEBUG", IS_DEBUG
     }
 
     buildTypes {
