--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,12 @@ buildscript {
 }
 
 allprojects {
-
     repositories {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
-        mavenLocal()
+        maven { url 'http://192.168.1.5:8081/repository/text/' }
+
     }
 
 }
