--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,5 @@ dependencies {
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife"
     annotationProcessor "com.alibaba:arouter-compiler:$arouter_compiler"
 
-    implementation 'com.dinlive.textlib:textlib:1.0.0'
+    //implementation 'com.dinlive.textlib:textlib:1.0.0'
 }
