--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
-        maven { url 'http://192.168.1.5:8081/repository/text/' }
+        //maven { url 'http://192.168.1.5:8081/repository/text/' }
 
     }
 
