--- a/dinlive_baselib/build.gradle
+++ b/dinlive_baselib/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     //design
     api "com.android.support:design:$design"
 
+    //eventbus
+    api 'org.greenrobot:eventbus:3.1.1'
     //butterknife
     api "com.jakewharton:butterknife:$butterknife"
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife"
@@ -111,5 +113,14 @@ dependencies {
     //BRVAH RecyclerAdapter框架（万能适配器） https://github.com/CymChad/BaseRecyclerViewAdapterHelper
     api "com.github.CymChad:BaseRecyclerViewAdapterHelper:$BaseRecyclerViewAdapterHelper"
 
+    //banner  https://github.com/youth5201314/banner
+    api 'com.youth.banner:banner:1.4.10'
+    //https://github.com/saiwu-bigkoo/Android-ConvenientBanner
+    api 'com.bigkoo:ConvenientBanner:2.1.4'
+    //Android 获取图片颜色值的包
+    api 'com.android.support:palette-v7:28.0.0'
+
     api 'cn.jzvd:jiaozivideoplayer:6.2.12'
+
+
 }
