--- a/module_person/src/main/AndroidManifest.xml
+++ b/module_person/src/main/AndroidManifest.xml
@@ -1,2 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dinlive.din.home" />
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.dinlive.din.person">
+
+    <application
+        android:allowBackup="false"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:replace="android:allowBackup">
+        <activity android:name=".TimeUtilsActivity" />
+        <activity android:name=".DropDownMenuActivity" />
+        <activity android:name=".BannersActivity" />
+
+    </application>
+</manifest>
