--- a/dinlive_baselib/build.gradle
+++ b/dinlive_baselib/build.gradle
@@ -121,6 +121,10 @@ dependencies {
     api 'com.android.support:palette-v7:28.0.0'
 
     api 'cn.jzvd:jiaozivideoplayer:6.2.12'
+    //仿新版QQ可拖拽小红点 https://github.com/kanglongba/MagicRedDot
+    api 'com.bupt.edison.magicreddot:magicreddot:1.0.0'
+    //动态权限  https://github.com/tbruyelle/RxPermissions
+    api 'com.github.tbruyelle:rxpermissions:0.10.2'
 
 
 }
