--- a/dinlive_baselib/build.gradle
+++ b/dinlive_baselib/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     //design
     api "com.android.support:design:$design"
 
-    //eventbus
+    //eventbus https://github.com/greenrobot/EventBus
     api 'org.greenrobot:eventbus:3.1.1'
     //butterknife
     api "com.jakewharton:butterknife:$butterknife"
@@ -125,6 +125,4 @@ dependencies {
     api 'com.bupt.edison.magicreddot:magicreddot:1.0.0'
     //动态权限  https://github.com/tbruyelle/RxPermissions
     api 'com.github.tbruyelle:rxpermissions:0.10.2'
-
-
 }
