--- a/module_find/build.gradle
+++ b/module_find/build.gradle
@@ -1,17 +1,15 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'com.jakewharton.butterknife'
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    defaultConfig {
-        applicationId "com.dinlive.din"
 
+    defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -19,12 +17,14 @@ android {
             }
         }
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -34,19 +34,10 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation project(':dinlive_baselib')
-    implementation project(':module_home')
-    implementation project(':module_find')
-    implementation project(':module_person')
-    implementation project(':module_login')
-
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife"
     annotationProcessor "com.alibaba:arouter-compiler:$arouter_compiler"
-
-    //implementation 'com.dinlive.textlib:textlib:1.0.0'
 }
