--- a/build.gradle
+++ b/build.gradle
@@ -54,5 +54,6 @@ ext {
     jsbridge = '1.0.4'
     LiveEventBus = '1.4.4'
     BaseRecyclerViewAdapterHelper = '2.9.30'
+    agentweb = '4.1.2'
 
 }
