--- a/dinlive_baselib/src/main/AndroidManifest.xml
+++ b/dinlive_baselib/src/main/AndroidManifest.xml
@@ -12,13 +12,21 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
-
-    <application>
+    <application
+        android:allowBackup="false"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:replace="android:allowBackup">
         <meta-data
             android:name="design_width_in_dp"
             android:value="360" />
         <meta-data
             android:name="design_height_in_dp"
             android:value="640" />
+        <activity android:name=".base.AgentWebActivity" />
+
+
     </application>
+
 </manifest>
