--- a/dinlive_baselib/build.gradle
+++ b/dinlive_baselib/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     api 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
     //下拉刷新 https://github.com/scwang90/SmartRefreshLayout
+    api "com.scwang.smartrefresh:SmartRefreshHorizontal:$SmartRefreshHorizontal"
     api "com.scwang.smartrefresh:SmartRefreshLayout:$SmartRefreshLayout"
     api "com.scwang.smartrefresh:SmartRefreshHeader:$SmartRefreshLayout"
 
@@ -131,4 +132,6 @@ dependencies {
     api 'com.bupt.edison.magicreddot:magicreddot:1.0.0'
     //动态权限  https://github.com/tbruyelle/RxPermissions
     api 'com.github.tbruyelle:rxpermissions:0.10.2'
+
+    api 'cn.bingoogolapple:bga-badgeview:1.1.3@aar'
 }
