--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # 设置APP全局编译类型 true：测试环境 false：正式环境
 IS_DEBUG=true
+android.injected.testOnly=false
